@@ -9,7 +9,9 @@ Version 2.4:
 	  parent program (don't hold a strong reference).
 	* Add fallback objects---a single object can be called for any
 	  object under a given path prefix.
-	* Add support for localization of strings via gettext
+	* Add support for localization of strings via gettext.
+	* Throw a nicer error when signals are not declared as part of an
+	  interface.
 
 Version 2.3.2:
 
